--- a/index.html
+++ b/index.html
@@ -4,13 +4,66 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Eengine Tasks</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <div class="container">
+    <!-- <div class="container">
       <form>
         <input type="text" id="numInput" />
         <button type="submit" id="submitBtn"></button>
       </form>
+    </div> -->
+    <div class="layout">
+      <header class="header">
+        <div class="container">Nagłówek</div>
+      </header>
+      <main class="container main">
+        <section class="first">
+          <p class="first__text-top">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt,
+            nesciunt.
+          </p>
+          <img src="image1.jpg" alt="Forest" class="first__img" />
+          <p class="first__text-bottom">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+            atque consequatur voluptatibus reiciendis, rem veritatis rerum vero
+            doloremque, magni odit voluptatem error doloribus quia fugit? Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Corporis atque
+            consequatur voluptatibus reiciendis, rem veritatis rerum vero
+            doloremque, magni odit voluptatem error doloribus quia fugit Lorem
+            ipsum dolor sit amet consectetur adipisicing elit. Corporis atque
+            consequatur voluptatibus reiciendis, rem veritatis rerum vero
+            doloremque, magni odit voluptatem error doloribus quia fugit
+          </p>
+        </section>
+        <section class="second">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni
+            doloribus quisquam deserunt itaque pariatur.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+            atque consequatur voluptatibus reiciendis, rem veritatis rerum vero
+            doloremque, magni odit voluptatem error doloribus quia fugit?
+          </p>
+        </section>
+        <section class="third">
+          <img src="image2.jpg" alt="Forest" />
+        </section>
+        <section class="forth">
+          <p class="forth__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
+            provident voluptate, officiis enim praesentium aspernatur
+            consectetur itaque veritatis laboriosam consequuntur similique iste
+            tempora unde, accusantium animi at ratione illum! Animi nostrum nemo
+            itaque aut ea ipsum nisi quia eum corporis voluptas libero,
+            explicabo alias aliquam!
+          </p>
+        </section>
+      </main>
+      <footer class="footer">
+        <div class="container">Stopka</div>
+      </footer>
     </div>
     <script src="index.js"></script>
   </body>
