set seperate folders, finish zadanie 3

--- a/zadanie1/index.html
+++ b/zadanie1/index.html
@@ -3,16 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Eengine Tasks</title>
+    <title>Eengine Tasks - Zadanie 1</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <div class="container">
-      <form>
-        <input type="text" id="numInput" />
-        <button type="submit" id="submitBtn"></button>
-      </form>
-    </div> -->
     <div class="layout">
       <header class="header">
         <div class="container">Nagłówek</div>
@@ -20,8 +14,7 @@
       <main class="container main">
         <section class="first">
           <p class="first__text-top">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt,
-            nesciunt.
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
           </p>
           <img src="image1.jpg" alt="Forest" class="first__img" />
           <p class="first__text-bottom">
@@ -39,16 +32,18 @@
         <section class="second">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel magni
-            doloribus quisquam deserunt itaque pariatur.
+            doloribus quisquam deserunt itaque pariatur. Lorem ipsum dolor sit
+            amet consectetur adipisicing elit. Corporis atque consequatur
+            voluptatibus reiciendis, rem veritatis rerum vero doloremque, magni
+            odit voluptatem error doloribus quia fugit?
           </p>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
-            atque consequatur voluptatibus reiciendis, rem veritatis rerum vero
-            doloremque, magni odit voluptatem error doloribus quia fugit?
+            atque consequatur voluptatibus reiciendis.
           </p>
         </section>
         <section class="third">
-          <img src="image2.jpg" alt="Forest" />
+          <img src="image2.jpg" alt="Forest" class="third__img" />
         </section>
         <section class="forth">
           <p class="forth__text">
@@ -57,7 +52,14 @@
             consectetur itaque veritatis laboriosam consequuntur similique iste
             tempora unde, accusantium animi at ratione illum! Animi nostrum nemo
             itaque aut ea ipsum nisi quia eum corporis voluptas libero,
-            explicabo alias aliquam!
+            explicabo alias aliquam! Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Dolores provident voluptate, officiis enim
+            praesentium aspernatur consectetur itaque veritatis laboriosam
+            consequuntur similique iste tempora unde, accusantium animi at
+            ratione illum! Animi nostrum nemo itaque aut ea ipsum nisi quia eum
+            corporis voluptas libero, explicabo alias aliquam! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Dolores provident voluptate,
+            officiis enim praesentium aspernatur consectetur itaque veritatis
           </p>
         </section>
       </main>
@@ -65,6 +67,5 @@
         <div class="container">Stopka</div>
       </footer>
     </div>
-    <script src="index.js"></script>
   </body>
 </html>
